--- a/editor.html
+++ b/editor.html
@@ -1,10 +1,10 @@
-<div class="panel panel-primary">
-  <div class="panel-heading clearfix">
-    <h2 class="panel-title pull-left">Instructions</h2>
-    <button class="btn btn-sm btn-link pull-right"><span class="glyphicon glyphicon-remove"></span></button>
-  </div>
-  <div class="panel-body">
-    <p>Write HMMM code on the left side, then click "Assemble!" to build your binary. Once you have a binary on the right, click "Simulate!" to run it!</p>
+
+<div class="row">
+  <div class="col-md-16">
+    <div class="alert alert-info alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <strong>Instructions:</strong> Write HMMM code on the left side, then click "Assemble!" to build your binary. Once you have a binary on the right, click "Simulate!" to run it!
+    </div>
   </div>
 </div>
 <div class="row">
