Getting closer to working animation code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <a href="#" class="navbar-brand">HMMM Simulator</a>
       <ul class="nav navbar-nav pull-right">
-        <li><a href="#/about">About/Credits</a></li>
+        <li><a href="" ng-click="go('/about', 'none')">About/Credits</a></li>
       </ul>
     </nav>
     <div class="view-container">
