--- a/simulator.html
+++ b/simulator.html
@@ -2,7 +2,7 @@
   <div class="col-md-16">
     <div class="panel panel-default">
       <div class="panel-body">
-        <button class="btn btn-default" ng-click="back()"><span class="glyphicon glyphicon-arrow-left"></span> Back to Editor</button>
+        <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back to Editor</button>
         <button class="btn btn-primary pull-right">Run! <span class="glyphicon glyphicon-play"></span></button>
       </div>
     </div>
