Working on simulator layout

--- a/simulator.html
+++ b/simulator.html
@@ -9,80 +9,40 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-16">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">HMMM Console</h3>
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-md-16">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">CPU</h3>
+          </div>
+          <div class="panel-body">
+          
+          </div>
+        </div>
       </div>
-      <div class="panel-body">
-        <div id="hmmm-console"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-16">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">HMMM Console</h3>
+          </div>
+          <div class="panel-body">
+            <div id="hmmm-console"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-1 register">
-    <div>r0</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r1</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r2</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r3</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r0</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r1</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r2</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r3</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r0</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r1</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r2</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r3</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r0</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r1</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r2</div>
-    <div>00000000</div>
-  </div>
-  <div class="col-md-1 register">
-    <div>r3</div>
-    <div>00000000</div>
+  <div class="col-md-10">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">RAM</h3>
+      </div>
+      <div class="panel-body">
+      
+      </div>
+    </div>
   </div>
 </div>
