Working on simulator markup

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>HMMM Simulator</title>
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="site.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-animate.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="ace/ace.js"></script>
   <script src="hmmm/hmmm-assembler.js"></script>
   <script src="app.js"></script>
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-static-top">
       <a href="#" class="navbar-brand">HMMM Simulator</a>
       <ul class="nav navbar-nav pull-right">
         <li><a href="" ng-click="go('/about', 'none')">About/Credits</a></li>
