--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-animate.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="ui-utils/ui-utils.min.js"></script>
   <script src="ace/ace.js"></script>
   <script src="hmmm/hmmm-assembler.js"></script>
   <script src="app.js"></script>
