--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="ui-utils/ui-utils.min.js"></script>
   <script src="ace/ace.js"></script>
   <script src="hmmm/hmmm-assembler.js"></script>
+  <script src="hmmm/hmmm-simulator.js"></script>
   <script src="app.js"></script>
 </head>
 <body>
