Added save file support for HMMM editor

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         Source code is available <a href="https://github.com/shickey/HMMM.js">on GitHub</a>.
       </p>
       <p class="lead">
-        HMMM.js is a Javascript implementation of a HMMM assembler and simulator written in the style of (and on top of) <a href="http://nodejs.org/">node.js</a>.
+        HMMM.js is a Javascript implementation of a HMMM assembler and simulator written in the style of <a href="http://nodejs.org/">node.js</a>.
       </p>
       <p class="lead">
         The HMMM Simulator uses HMMM.js as a backend for assembly and simulation of the language. In addition, the HMMM Simulator uses several excellent open source projects:
@@ -27,6 +27,9 @@
       </p>
       <p class="lead">
         <span class="glyphicon glyphicon-chevron-right"></span> <a href="http://ace.c9.io/">Ace Editor</a>
+      </p>
+      <p class="lead">
+        <span class="glyphicon glyphicon-chevron-right"></span> <a href="https://github.com/eligrey/FileSaver.js">FileSaver.js</a>
       </p>
     </div>
   </div>
