--- a/editor.html
+++ b/editor.html
@@ -15,7 +15,7 @@
       <div class="panel-body">
         <div class="editor-head">
           <button class="btn btn-default">Load File <span class="glyphicon glyphicon-floppy-open"></span></button>
-          <button class="btn btn-default">Save File <span class="glyphicon glyphicon-floppy-save"></span></button>
+          <button class="btn btn-default" ng-click="saveFile()">Save File <span class="glyphicon glyphicon-floppy-save"></span></button>
           <button class="btn btn-primary pull-right" ng-click="assemble()">Assemble! <span class="glyphicon glyphicon-arrow-right"></span></button>
         </div>
         <div id="hmmm-editor" class="editor"></div>
