--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="ui-utils/ui-utils.min.js"></script>
   <script src="ace/ace.js"></script>
+  <script src="file-saver/FileSaver.min.js"></script>
   <script src="hmmm/hmmm-assembler.js"></script>
   <script src="hmmm/hmmm-simulator.js"></script>
   <script src="app.js"></script>
