Added documentation link to editor

--- a/editor.html
+++ b/editor.html
@@ -17,6 +17,7 @@
           <button class="btn btn-default" ng-click="loadFile()">Load File <span class="glyphicon glyphicon-floppy-open"></span></button>
           <input type="file" id="secret-file-select" accept=".hmmm" onchange="angular.element(this).scope().fileSelected(this)" />
           <button class="btn btn-default" ng-click="saveFile()">Save File <span class="glyphicon glyphicon-floppy-save"></span></button>
+          <a class="btn btn-default" href="http://www.cs.hmc.edu/~cs5grad/cs5/hmmm/documentation/documentation.html" target="_blank">Docs <span class="glyphicon glyphicon-book"></span></a>
           <button class="btn btn-primary pull-right" ng-click="assemble()">Assemble! <span class="glyphicon glyphicon-arrow-right"></span></button>
         </div>
         <div id="hmmm-editor" class="editor"></div>
