Updated about page

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
       <h1>About/Credits</h1>
       <p class="lead">
         Harvey-Mudd Miniature Machine (HMMM) is an assembly language for a simulated 16-bit, 24 instruction computer with 256 16-bit words of memory primarily targeted for educational use.
+        HMMM was developed for <a href="https://www.cs.hmc.edu/twiki/bin/view/ModularCS1">Harvey Mudd's Introduction to Computer Science course</a> and a full explanation of the machine can be found in the <a href="http://www.cs.hmc.edu/csforall/ComputerOrganization/ComputerOrganization.html#hmmm">CS For All</a> online text.
         Documentation for the language can be found <a href="http://www.cs.hmc.edu/~cs5grad/cs5/hmmm/documentation/documentation.html">on Harvey Mudd's website</a>.
       </p>
       <p class="lead">
