Added examples and fixed jumpn bug

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="lib/ace/ace.js"></script>
   <script src="lib/file-saver/FileSaver.min.js"></script>
   <script src="js/hmmm.js"></script>
+  <script src="js/hmmm_examples.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
